--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -24,7 +24,7 @@
             android:layout_marginEnd="32dp"
             android:paddingTop="4dp"
             android:paddingBottom="4dp"
-            android:text="Task"
+            android:text="@string/task"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
             android:layout_marginEnd="32dp"
             android:paddingTop="4dp"
             android:paddingBottom="4dp"
-            android:text="Details"
+            android:text="@string/details"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView_task" />
@@ -48,10 +48,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:hint="Date"
-            android:textColor="@color/colorPrimary"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/date_background"
+            android:hint="@string/date"
             android:paddingTop="4dp"
             android:paddingBottom="4dp"
+            android:textColor="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView_details" />
 
