--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -6,6 +6,8 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="0dp"
     android:layout_marginBottom="1dp"
+    android:layout_marginStart="0.5dp"
+    android:layout_marginEnd="0.5dp"
     android:elevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
